--- a/Web.API/appsettings.Development.json
+++ b/Web.API/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DataBase": "Server=localhost;Database=ConCentra;Integrated Security=True;Encrypt=false"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
