--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="ErrorOr" Version="1.2.1" />
     <PackageReference Include="MediatR" Version="12.1.1" />
   </ItemGroup>
 
