--- a/Web.API/appsettings.json
+++ b/Web.API/appsettings.json
@@ -8,5 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Issuer": "https://joydipkanjilal.com/",
+    "Audience": "https://joydipkanjilal.com/",
+    "Key": "CONCENTRA2023"
+  }
 }
