--- a/Web.API/appsettings.Development.json
+++ b/Web.API/appsettings.Development.json
@@ -7,5 +7,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Jwt": {
+    "Issuer": "https://joydipkanjilal.com/",
+    "Audience": "https://joydipkanjilal.com/",
+    "Key": "CONCENTRA2023"
   }
 }
