--- a/Web.API/appsettings.Development.json
+++ b/Web.API/appsettings.Development.json
@@ -9,8 +9,9 @@
     }
   },
   "Jwt": {
-    "Issuer": "https://joydipkanjilal.com/",
-    "Audience": "https://joydipkanjilal.com/",
-    "Key": "CONCENTRA2023"
+    "Issuer": "http://localhost:5209/",
+    "Audience": "http://localhost:5209/",
+    "Key": "CONCENTRA2023@AASSDDD",
+    "Subject": "baseWebApi"
   }
 }
