--- a/Web.API/appsettings.json
+++ b/Web.API/appsettings.json
@@ -10,8 +10,9 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Issuer": "https://joydipkanjilal.com/",
-    "Audience": "https://joydipkanjilal.com/",
-    "Key": "CONCENTRA2023"
+    "Issuer": "http://localhost:5209/",
+    "Audience": "http://localhost:5209/",
+    "Key": "CONCENTRA2023@AASSDDD",
+    "Subject": "baseWebApi"
   }
 }
